# nativeshell

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflow/: check_and_lint.yml
.github/workflows/: build_test.yml  check_and_lint.yml
build_test/native_assets_package/: .metadata  README.md  ffigen.yaml  pubspec.yaml
build_test/native_assets_package/hook/: build.dart
build_test/native_assets_package/lib/: native_assets_package.dart
build_test/native_assets_package/src/: native_assets_package.c
build_test/native_assets_package/test/: native_assets_package_test.dart
build_test/project1/: Cargo.toml  analysis_options.yaml  pubspec.yaml
build_test/project1/lib/: main.dart
build_test/project2/: Cargo.toml  build.rs  pubspec.yaml
build_test/project2/lib/: main.dart
build_test/project2/src/: main.rs
core/dart/: .metadata  pubspec.yaml
core/rust/: Cargo.toml
core/rust/src/: context.rs  finalizable_handle.rs  handle.rs  lib.rs  native_pointer.rs  run_loop.rs  value.rs
core/rust/src/derive_internal/: mod.rs
core/rust/src/ffi/: api.rs  functions.rs  mod.rs  port.rs  value.rs
core/rust/src/message_channel/: async_method_handler.rs  codec.rs  message_channel.rs  method_handler.rs  mod.rs
core/rust/src/platform/: mod.rs
core/rust/src/platform/android/: run_loop.rs
core/rust/src/platform/darwin/: mod.rs  sys.rs
core/rust/src/platform/linux/: run_loop.rs  sys.rs
core/rust/src/platform/win32/: adapter.rs  mod.rs  run_loop.rs  sys.rs
core/rust/src/util/: black_box.rs  future.rs  mod.rs
core/rust_derive/: Cargo.toml
dart/core/: analysis_options.yaml  pubspec.yaml
nativeshell/: Cargo.toml  README.md  build.rs  pubspec.yaml
nativeshell/key_codes/: gen_key_map.rs
nativeshell/keyboard_map/: gen_keyboard_map.rs
nativeshell/lib/: nativeshell.dart
nativeshell/lib/src/: accelerator.dart  api_constants.dart  api_model.dart  constants.dart  drag_drop.dart  event.dart  key_interceptor.dart  menu.dart  menu_bar.dart  menu_bar_internal.dart  menu_internal.dart  mutex.dart  window.dart  window_manager.dart  window_method_channel.dart  window_widget.dart
nativeshell/src/: error.rs  lib.rs
nativeshell/src/codec/: message_channel.rs  method_channel.rs  mod.rs  sender.rs  standard_codec.rs
nativeshell/src/codec/value/: deserializer.rs  mod.rs  serializer.rs
nativeshell/src/shell/: api_constants.rs  api_model.rs  async_method_call_handler.rs  binary_messenger.rs  bundle.rs  constants.rs  context.rs  engine.rs  engine_manager.rs  event_channel.rs  geometry.rs  hot_key_manager.rs  keyboard_map_manager.rs  macros.rs  menu_manager.rs  message_manager.rs  method_call_handler.rs  method_channel.rs  mod.rs  observatory.rs  plugin.rs  run_loop.rs  screen_manager.rs  status_item_manager.rs  structs.rs  texture.rs  window.rs  window_manager.rs  window_method_channel.rs
nativeshell/src/shell/platform/: key_interceptor.rs  mod.rs
nativeshell/src/shell/platform/linux/: app_delegate.rs  binary_messenger.rs  drag_context.rs  drag_data.rs  engine.rs  error.rs  flutter.rs  flutter_sys.rs  hot_key.rs  init.rs  key_event.rs  keyboard_map.rs  menu.rs  menu_item.rs  mod.rs  run_loop.rs  screen_manager.rs  size_widget.rs  status_item.rs  texture.rs  utils.rs  window.rs  window_menu.rs
nativeshell/src/shell/platform/macos/: app_delegate.rs  binary_messenger.rs  bundle.rs  drag_context.rs  drag_data.rs  engine.rs  error.rs  hot_key.rs  hot_key_sys.rs  init.rs  key_event.rs  keyboard_map.rs  keyboard_map_sys.rs  menu.rs  mod.rs  run_loop.rs  screen_manager.rs  status_item.rs  texture.rs  utils.rs  window.rs  window_buttons.m
nativeshell/src/shell/platform/null/: binary_messenger.rs  drag_data.rs  engine.rs  error.rs  init.rs  key_event.rs  keyboard_map.rs  menu.rs  mod.rs  run_loop.rs  screen_manager.rs  status_item.rs  texture.rs  window.rs
nativeshell/src/shell/platform/win32/: app_delegate.rs  binary_messenger.rs  display.rs  dpi.rs  drag_com.rs  drag_context.rs  drag_data.rs  drag_util.rs  dxgi_hook.rs  engine.rs  error.rs  flutter_api.rs  flutter_sys.rs  hot_key.rs  init.rs  key_event.rs  keyboard_map.rs  menu.rs  mod.rs  run_loop.rs  screen_manager.rs  status_item.rs  texture.rs  util.rs  window.rs  window_adapter.rs  window_base.rs  window_menu.rs
nativeshell/src/util/: capsule.rs  cell.rs  diff.rs  errno.rs  future.rs  log.rs  mod.rs
nativeshell_build/: Cargo.toml  LICENSE  README.md
nativeshell_build/src/: DummyProject.tar  Info.plist  artifacts_emitter.rs  error.rs  flutter_build.rs  lib.rs  macos_bundle.rs  plugins.rs  plugins_linux.rs  plugins_macos.rs  plugins_windows.rs  resources.rs  util.rs
nativeshell_build/src/res/linux/: CMakeLists.txt
nativeshell_build/src/res/macos/: DummyProject.tar
nativeshell_build/src/res/windows/: CMakeLists.txt
nativeshell_dart/: CHANGELOG.md  README.md  analysis_options.yaml  pubspec.yaml
nativeshell_dart/lib/: accelerators.dart  nativeshell.dart
nativeshell_demo/: Cargo.toml  build.rs  pubspec.yaml
nativeshell_demo/lib/: drag_drop.dart  file_open_dialog.dart  home.dart  main.dart  menu_bar_window.dart  modal.dart  popup_menu.dart  util.dart  veil.dart
nativeshell_demo/src/: file_open_dialog.rs  main.rs
nativeshell_ng/: Cargo.toml
nativeshell_ng_test/: Cargo.toml  build.rs  pubspec.yaml
nativeshell_ng_test/lib/: main.dart
nativeshell_ng_test/src/: main.rs
rust/core/: Cargo.toml
rust/core/src/: context.rs  handle.rs  lib.rs  run_loop.rs  value.rs
rust/core/src/derive_internal/: mod.rs
rust/core/src/ffi/: api.rs  mod.rs  port.rs  value.rs
rust/core/src/message_channel/: async_method_handler.rs  codec.rs  message_channel.rs  method_handler.rs  mod.rs  native_vector.rs
rust/core/src/platform/: mod.rs
rust/core/src/platform/android/: sys.rs
rust/core/src/platform/darwin/: mod.rs  run_loop.rs
rust/core/src/platform/macos/: mod.rs  run_loop.rs
rust/core/src/util/: mod.rs
rust/core/tests/: derive.rs
rust/derive/: Cargo.toml
rust/derive_test/: Cargo.toml
rust/derive_test/src/: lib.rs
rust/derive_test/tests/: tests.rs
(+59 files in other folders)
