[package]
name = "nativeshell"
version = "0.1.0"
authors = ["Matej Knopp <matej.knopp@gmail.com>"]
edition = "2018"
description = "NativeShell Rust package"
license = "MIT OR Apache-2.0"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.119", features = ["derive"] }
serde_bytes = "0.11.5"
serde_json = "1.0.59"
log = "0.4.13"
velcro = "0.5.3"
lazy_static = "1.4.0"
diff = "0.1.12"
libc = "0.2.94"

[build-dependencies]
cargo-emit = "0.1"
nativeshell_build = { version="0.1.0", path = "../nativeshell_build" }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24"
core-foundation = "0.9"
core-graphics = "0.22"
dispatch = "0.2.0"
objc = "0.2.7"
block = "0.1.6"
exec = "0.3.1"
process_path = "0.1.3"

[target.'cfg(target_os = "windows")'.dependencies]
windows = "0.10.0"
utf16_lit = "2.0.1"
const-cstr = "0.3.0"
widestring = "0.4.3"
byte-slice-cast = "1.0.0"
detour = {version = "0.8.0", default-features = false }

[target.'cfg(target_os = "windows")'.build-dependencies]
windows = "0.10.0"

[target.'cfg(target_os = "linux")'.dependencies]
glib = "0.10.3"
gio = "0.9.1"
glib-sys = "0.10.1"
gio-sys = "0.10.1"
gobject-sys = "0.10.0"
gdk =  "0.13.2"
cairo-rs = { version = "0.9.1", features = ["v1_14"] }
gtk = {version = "0.9.2", features = ["v3_22"] }
gtk-sys = "0.10.0"
gdk-sys = "0.10.0"
url = "2.2.1"
percent-encoding = "2.1.0"
