[package]
name = "nativeshell"
version = "0.1.11"
authors = ["Matej Knopp <matej.knopp@gmail.com>"]
edition = "2018"
description = "NativeShell Rust package"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.119", features = ["derive"] }
serde_bytes = "0.11.5"
serde_json = "1.0.59"
log = "0.4.13"
velcro = "0.5.3"
lazy_static = "1.4.0"
diff = "0.1.12"
libc = "0.2.94"
futures = "0.3.17"
async-trait = "0.1.51"

[build-dependencies]
cargo-emit = "0.2.1"
nativeshell_build = { version="0.1.1", path = "../nativeshell_build" }
serde = { version = "1.0.119", features = ["derive"] }
serde_json = "1.0.59"
anyhow = "1.0.41"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24"
core-foundation = "0.9"
core-graphics = "0.22"
dispatch = "0.2.0"
objc = "0.2.7"
block = "0.1.6"
exec = "0.3.1"
process_path = "0.1.3"
url = "2.2.1"

[target.'cfg(target_os = "macos")'.build-dependencies]
cc = "1.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = "0.21.1"
utf16_lit = "2.0.1"
const-cstr = "0.3.0"
widestring = "0.4.3"
byte-slice-cast = "1.0.0"
detour = {version = "0.8.0", default-features = false }
base64 = "0.13.0"

[target.'cfg(target_os = "windows")'.build-dependencies]
windows = "0.21.1"

[target.'cfg(target_os = "linux")'.dependencies]
glib = "0.14.0"
gio = "0.14.0"
glib-sys = "0.14.0"
gio-sys = "0.14.0"
gobject-sys = "0.14.0"
gdk =  "0.14.0"
cairo-rs = { version = "0.14.0" }
gtk = {version = "0.14.0", features = ["v3_22"] }
gtk-sys = "0.14.0"
gdk-sys = "0.14.0"
url = "2.2.1"
percent-encoding = "2.1.0"
