[package]
name = "nativeshell_build"
version = "0.1.0"
authors = ["Matej Knopp <matej.knopp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-emit = "0.1"
serde = { version = "1.0.119", features = ["derive"] }
serde_json = "1.0"
pathdiff = "0.2.0"
path-slash = "0.1.4"
dunce = "1.0.1"
copy_dir = "0.1.2"
