[package]
name = "nativeshell_demo"
version = "0.1.0"
authors = ["Matej Knopp <matej.knopp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cargo-emit = "0.1"
nativeshell_build = { path = "../nativeshell_build" }

[dependencies]
nativeshell = { path = "../nativeshell" }
env_logger = "0.8.3"
serde = { version = "1.0.119", features = ["derive"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24"
objc = "0.2.7"
block = "0.1.6"

[target.'cfg(target_os = "windows")'.dependencies]
windows = "0.8.0"
widestring = "0.2.2"

[target.'cfg(target_os = "windows")'.build-dependencies]
windows = "0.8.0"
