[package]
name = "nativeshell_ng_test"
version = "0.1.0"
authors = ["Matej Knopp <matej.knopp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cargo-emit = "0.2.1"
nativeshell_build = { path = "../nativeshell_build" }

[dependencies]
nativeshell = { path = "../nativeshell" }
nativeshell_core = { path = "../core/rust", features = ["derive"] }
env_logger = "0.9.0"
