[package]
name = "nativeshell_core"
version = "0.1.0"
authors = ["Matej Knopp <matej.knopp@gmail.com>"]
edition = "2021"
description = "NativeShell Rust package"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.17"
async-trait = "0.1.51"
once_cell = "1.8.0"
nativeshell_derive = { path = "../rust_derive", optional = true}

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
objc = "0.2.7"

[features]
derive = ["nativeshell_derive"]