[package]
name = "nativeshell_core"
version = "0.1.12"
authors = ["Matej Knopp <matej.knopp@gmail.com>"]
edition = "2018"
description = "NativeShell Rust package"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.13"
futures = "0.3.17"
async-trait = "0.1.51"
once_cell = "1.8.0"
thiserror = "1.0.30"
nativeshell_derive = { path = "../derive", optional = true}

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24"
core-foundation = "0.9"
dispatch = "0.2.0"
objc = "0.2.7"
block = "0.1.6"

[features]
derive = ["nativeshell_derive"]